# src/api/routes/contacts.js
@@ -1,13 +1,0 @@
-const router = require('express').Router();
-const contactsController = require('../controllers/contacts');
-
-
-router.get('/', contactsController.getAll);
-router.get('/:id', contactsController.get);
-
-router.post('/', contactsController.create);
-router.put('/:id', contactsController.update);
-router.delete('/:id', contactsController.delete);
-
-
-module.exports = router;
